src/test/ui/consts/const-eval/const_fn_ptr_fail2.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/const_fn_ptr_fail2.rs:20:16
   |
LL |     assert_eq!(Y, 4);
   |                ^ referenced constant has errors

error[E0080]: evaluation of constant value failed
  --> $DIR/const_fn_ptr_fail2.rs:22:16
   |
LL |     assert_eq!(Z, 4);
   |                ^ referenced constant has errors

warning: skipping const checks
   |
help: skipping check for `const_fn_fn_ptr_basics` feature
  --> $DIR/const_fn_ptr_fail2.rs:12:14
   |
LL | const fn bar(x: fn(usize) -> usize, y: usize) -> usize {
   |              ^
help: skipping check for `const_fn_fn_ptr_basics` feature
  --> $DIR/const_fn_ptr_fail2.rs:13:5
   |
LL |     x(y)
   |     ^
help: skipping check that does not even have a feature gate
  --> $DIR/const_fn_ptr_fail2.rs:13:5
   |
LL |     x(y)
   |     ^^^^

error: aborting due to 2 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0080`.
